# frclib-farfetched

./: .gitignore  README.md
shiitake-server-rs/: Cargo.toml  arm-roborio-linux-gnueabi.json  build.rs  build.sh  ni-rt.ini  serial.test
shiitake-server-rs/.cargo/: config.toml
shiitake-server-rs/src/: ini.rs  main.rs  measuring.rs  rio_interface.rs  system.rs  webpage.rs
shiitake-server-rs/src/types/: mod.rs  routes.rs
shiitake-webpage/: package-lock.json  package.json  tsconfig.json  webpack.config.js
shiitake-webpage/src/: fetcher.ts  grapher.ts  index.html  index.ts  mock.ts  shiitake_types.ts  webpage.ts
