[package]
name = "shiitake"
version = "0.1.1"
edition = "2021"

[dependencies]
sysinfo = {version = "0.29.10", default-features = false}
axum = { version = "0.6.18", default-features = false, features = ["tokio", "http1", "json", "macros"] }
tokio = { version = "1.28.2", features = ["rt", "macros"]}
thiserror = "1.0.63"
static_init = { version = "1.0.3", features = ["thread_local"] }
nix = { version = "0.29.0", features = ["time", "reboot", "net"] }
thread-priority = "1.1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tracing-subscriber = { version = "0.3.18", optional = true}
tracing = { version = "0.1.40", optional = true}

[build-dependencies]
flate2 = "1"
serde_json = "1"



[profile.release]
lto = true
strip = true
overflow-checks = false
opt-level = "z"
codegen-units = 1
panic = "abort"



[features]
logging = ["tracing-subscriber", "tracing"]
